# stuff

Graphs_cycles/: Graph.cs  Program.cs
Qt/SimpleCalc/: calculator.cpp  calculator.h  calculator.ui
graphs/: graph.cpp  graph.h  main.cpp
graphs_component/: Graph.cs  Program.cs  tests.txt
graphs_connected_component/: Graph.cs  Program.cs
graphs_cycles_check/: graphs.cs
graphs_dfs/: graph.cpp  graph.h  main.cpp
graphs_dfs_copy/: CMakeLists.txt  graph.cpp  graph.h  main.cpp
graphs_minmax_path/: CMakeLists.txt  graph.cpp
qsort_cs/: Program.cs
quick_sort/: CMakeLists.txt  main.cpp
